--- a/Test_Project/test-output/old/Default suite/methods-alphabetical.html
+++ b/Test_Project/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>15/01/28 13:19:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test_StreamConnect_Logout_1.Logout1()[pri:0, instance:test_package.Test_StreamConnect_Logout_1@546a03af]">Logout1</td> 
+<tr bgcolor="8e8568">  <td>15/01/29 17:33:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Annotate_Test.Annotate()[pri:0, instance:test_package.Annotate_Test@546a03af]">Annotate</td> 
   <td>main@1682092198</td>   <td></td> </tr>
 </table>
