commit for try catch code

--- a/Test_Project/test-output/index.html
+++ b/Test_Project/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\yumani\AppData\Local\Temp\testng-eclipse-298463504\testng-customsuite.xml</span>
+                    <span>C:\Users\yumani\AppData\Local\Temp\testng-eclipse--783844046\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,42 +101,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="AdminSettings">AdminSettings</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.Test_StreamConnect_Logout_8_try_catch" hash-for-method="AdminSettings">AdminSettings</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="ArchivingManagement">ArchivingManagement</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="Authentication">Authentication</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="DICOMSettings">DICOMSettings</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="EHRSettings">EHRSettings</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="ManageCodecs">ManageCodecs</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="ManageStreams">ManageStreams</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.CopyOfTest_StreamConnect_Logout_8_for_IE" hash-for-method="UserLogs">UserLogs</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="test_package.Test_StreamConnect_Logout_8_try_catch" hash-for-method="Authentication">Authentication</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -154,7 +124,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">test_package.CopyOfTest_StreamConnect_Logout_8_for_IE</span>
+              <span class="class-name">test_package.Test_StreamConnect_Logout_8_try_catch</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -166,51 +136,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ArchivingManagement">
-                  </a> <!-- ArchivingManagement -->
-                  <span class="method-name">ArchivingManagement</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="Authentication">
                   </a> <!-- Authentication -->
                   <span class="method-name">Authentication</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="DICOMSettings">
-                  </a> <!-- DICOMSettings -->
-                  <span class="method-name">DICOMSettings</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="EHRSettings">
-                  </a> <!-- EHRSettings -->
-                  <span class="method-name">EHRSettings</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ManageCodecs">
-                  </a> <!-- ManageCodecs -->
-                  <span class="method-name">ManageCodecs</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ManageStreams">
-                  </a> <!-- ManageStreams -->
-                  <span class="method-name">ManageStreams</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="UserLogs">
-                  </a> <!-- UserLogs -->
-                  <span class="method-name">UserLogs</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -218,7 +146,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\yumani\AppData\Local\Temp\testng-eclipse-298463504\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\yumani\AppData\Local\Temp\testng-eclipse--783844046\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -227,7 +155,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test_package.CopyOfTest_StreamConnect_Logout_8_for_IE&quot;/&gt;
+      &lt;class name=&quot;test_package.Test_StreamConnect_Logout_8_try_catch&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -267,44 +195,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UserLogs')
-data.setCell(0, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(0, 3, 3517);
+data.setCell(0, 1, 'Authentication')
+data.setCell(0, 2, 'test_package.Test_StreamConnect_Logout_8_try_catch')
+data.setCell(0, 3, 33384);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ManageStreams')
-data.setCell(1, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(1, 3, 2837);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ArchivingManagement')
-data.setCell(2, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(2, 3, 2745);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Authentication')
-data.setCell(3, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(3, 3, 2725);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'EHRSettings')
-data.setCell(4, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(4, 3, 2625);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'DICOMSettings')
-data.setCell(5, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(5, 3, 2555);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'AdminSettings')
-data.setCell(6, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(6, 3, 2528);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'ManageCodecs')
-data.setCell(7, 2, 'test_package.CopyOfTest_StreamConnect_Logout_8_for_IE')
-data.setCell(7, 3, 2471);
+data.setCell(1, 1, 'AdminSettings')
+data.setCell(1, 2, 'test_package.Test_StreamConnect_Logout_8_try_catch')
+data.setCell(1, 3, 32476);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -330,70 +234,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test_package.CopyOfTest_StreamConnect_Logout_8_for_IE</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test_package.Test_StreamConnect_Logout_8_try_catch</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">SetProperty</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">AdminSettings</span>
-                <span class="method-start">3081 ms</span>
+                <span class="method-start">1808 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">SetProperty</span>
-                <span class="method-start">5610 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">ArchivingManagement</span>
-                <span class="method-start">8183 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">SetProperty</span>
-                <span class="method-start">10929 ms</span>
+                <span class="method-start">34286 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Authentication</span>
-                <span class="method-start">13408 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">SetProperty</span>
-                <span class="method-start">16134 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">DICOMSettings</span>
-                <span class="method-start">18598 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">SetProperty</span>
-                <span class="method-start">21153 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">EHRSettings</span>
-                <span class="method-start">23640 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">SetProperty</span>
-                <span class="method-start">26265 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">ManageCodecs</span>
-                <span class="method-start">28756 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">SetProperty</span>
-                <span class="method-start">31227 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">ManageStreams</span>
-                <span class="method-start">33713 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">SetProperty</span>
-                <span class="method-start">36550 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">UserLogs</span>
-                <span class="method-start">39077 ms</span>
+                <span class="method-start">35862 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
